k8s/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: thinkai-mysql
  namespace: thinkai
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: thinkai-mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thinkai-mysql
  namespace: thinkai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thinkai-mysql
  template:
    metadata:
      labels:
        app: thinkai-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        args:
        - --default-authentication-plugin=mysql_native_password
        - --character-set-server=utf8mb4
        - --collation-server=utf8mb4_unicode_ci
        - --max-connections=180
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping", "-h", "127.0.0.1", "-uroot", "-proot"]
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command: ["mysqladmin", "ping", "-h", "127.0.0.1", "-uroot", "-proot"]
          initialDelaySeconds: 20
          periodSeconds: 5
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: thinkai-mysql
