k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: thinkai-backend
  namespace: thinkai
spec:
  type: ClusterIP
  selector:
    app: thinkai-backend
  ports: 
    - port: 80
      targetPort: 8081
