k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thinkai-backend
  namespace: thinkai
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.thinkai.id.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thinkai-backend
            port:
              number: 80
